add_library(jpeg STATIC
    jcapimin.c
    jcapistd.c
    jccoefct.c
    jccolor.c
    jcdctmgr.c
    jchuff.c
    jcinit.c
    jcmainct.c
    jcmarker.c
    jcmaster.c
    jcomapi.c
    jcparam.c
    jcphuff.c
    jcprepct.c
    jcsample.c
    jctrans.c
    jdapimin.c
    jdapistd.c
    jdatadst.c
    jdatasrc.c
    jdcoefct.c
    jdcolor.c
    jddctmgr.c
    jdhuff.c
    jdinput.c
    jdmainct.c
    jdmarker.c
    jdmaster.c
    jdmerge.c
    jdphuff.c
    jdpostct.c
    jdsample.c
    jdtrans.c
    jerror.c
    jfdctflt.c
    jfdctfst.c
    jfdctint.c
    jidctflt.c
    jidctfst.c
    jidctint.c
    jidctintelsse.c
    jidctred.c
    jmemmgr.c
    jmem-android.c
    jquant1.c
    jquant2.c
    jutils.c
    )

target_compile_options(jpeg
    PRIVATE
    -DAVOID_TABLES
    -O3
    -fstrict-aliasing
    -DANDROID_INTELSSE2_IDCT
    -msse2
    -DANDROID_TILE_BASED_DECODE
    -Wno-all
    )

target_include_directories(jpeg
    PUBLIC
    .
    )
